add rest ErrorResponse